chore: got api dispatcher running
